# cubesim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build.sh  config.h
include/: camera.h  cube.h  cubesim.h  shader.h
shaders/: default.frag  default.vert
src/: cube.c  cubesim_desktop.c  cubesim_web.c  main.c  shader.c
